[project]
name = "mdview"
version = "0.1"
dependencies = [
    "pandocfilters>=1.5.0",
]



[project.scripts]
md_cleanup = "md_cleanup:main"
mdview = "mdview:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mdview", "md_cleanup"]
